<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.AppCompat.DayNight.Dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/sign">

    <TextView
        android:id="@+id/textView"
        android:layout_width="374dp"
        android:layout_height="49dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Welcome to Connect."
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <Button
        android:id="@+id/launch"
        android:layout_width="227dp"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@android:color/background_dark"
        android:fontFamily="@font/alfa_slab_one"
        android:text="Launch"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.331"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/name"
        style="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:foregroundTint="@color/cardview_light_background"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        android:typeface="sans"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="confirm password"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="92dp"
        android:layout_height="147dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/launch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm"
        app:layout_constraintVertical_bias="0.25">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:text="Female" />

        <RadioButton
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="72dp"
            android:text="Male" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>